#          add release hytec8413-R1-1-3
#        30-Aug-2007, K. Luchini         (LUCHINI):
#          add release hytec8413-R1-1-2
#        29-Aug-2007, K. Luchini         (LUCHINI):
#          add release hytec8413-R1-1-1
#        02-Jul-2007, K. Luchini         (LUCHINI):
#          add release hytec8413-R1-1-0
#
#==============================================================

R2.3.0:            Marcio Donadio
04-Apr-2017        ellLib.h and errlog.h must be added to EPICS 3.15, too
04-Apr-2017        Module migrated to EPICS 3.15 and git workflow

hytec8413-R2-2-6:  Ernest Williams
18-Apr-2015        Build against ipac-R2-11_1-2; which buils all target archs
25-Aug-2015        Force tag to put this change on the HEAD (luchini)

hytec8413-R2-2-5_1-0:  Kristi Luchini
25-Aug-2015        Build against ipac-R2-11_1-1; which buils all target archs

hytec8413-R2-2-5:  Ernest Williams
26-Mar-2013        Build against ipac-R2-11_1-0; which buils all target archs

hytec8413-R2-2-4:  K. Luchini
05-Apr-2012        Fix warning in devMbbiHy8413.c by using casting
                   comment out ip231 for hytec8413TestApp and

hytec8413-R2-2-3: 23-Jan-2012, Ernesto
                  Add ip231 for hytec8413TestApp

hytec8413-R2-2-2: 12-Dec-2011, Ernesto         
                  Changes to source to include errlog.h
                  for EPICS R3-14-12; also include ellLib.h for EPICS R3-14-12

hytec8413-R2-2-1: 07-Sep-2011, K. Luchini (LUCHINI):
                  Upgrade ipac  from ipac-R2-8-lcls7 to ipac-R2-11-lcls1
                  Upgrade ip231 from ip231-R2-2-0    to ip231-R2-2-1

hytec8413-R2-2-0: Build with base-R3-14-9-lcls6 (RTEMS 4.9.4)

hytec8413-R2-1-0: Build with base-R3-14-9-lcls5 (RTEMS 4.9.3)

hytec8413-R2-0-0: Build with base-R3-14-9-lcls3 (RTEMS 4.9.1)

hytec8413-R1-1-5-1: Build with base-R3-14-9-lcls1 (RTEMS 4.7.1)
                    Replace CONFIG_APP with CONFIG_SITE
                    Add RELEASE_SITE
